[package]
name = "chomping-glass"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "chomping_glass"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
test = []

[profile.release]
lto = "fat"
codegen-units = 1
overflow-checks = true

[dependencies]
solana-program = "=1.14.12"
bytemuck = "=1.13.0"

# This file is BOTH your program package manifest and the workspace root.
[workspace]
members = [
    "chomp-bot",   # include ONLY the Rust client
]
resolver = "2"
