[package]
name = "chomp-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "=1.14.12"
solana-sdk    = "=1.14.12"

# Force-enable std on console (pulled in via indicatif)
console   = { version = "0.16.1", features = ["std"] }
indicatif = { version = "0.16.2", default-features = true }
